# office-add-ins-converter

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/project_instructions/: instructions.md
consolidate_markdown/: main.py
consolidate_markdown.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
consolidate_markdown/utils/: markdown_utils.py
scripts/: consolidate_markdown.py
source-docs/20250915/99b-output/ouput-07-word/office_addin_2572-2721_word_core/: office_addin_2572-2721_word_core.md  office_addin_2572-2721_word_core_meta.json
source-docs/20250915/99b-output/ouput-07-word/office_addin_2735-2792_word_core_02/: office_addin_2735-2792_word_core_02.md  office_addin_2735-2792_word_core_02_meta.json
source-docs/20250915/99b-output/ouput-07-word/office_addin_57-60_word_task/: office_addin_57-60_word_task.md  office_addin_57-60_word_task_meta.json
source-docs/20250915/99b-output/ouput-07-word/office_addin_813-820_word_samples_01/: office_addin_813-820_word_samples_01.md  office_addin_813-820_word_samples_01_meta.json
source-docs/20250915/99b-output/output-00-general/office_addin_105-113_runtimes/: office_addin_105-113_runtimes.md  office_addin_105-113_runtimes_meta.json
source-docs/outputs/: README.md
source-docs/outputs/20250916_082947/: ouput-07-word.md  output-00-general.md  output-01-debug.md  output-01b-ui-ux.md  output-02-excel.md  output-04-outlook.md  output-05-powerpoint.md  output-96-performance-and-testing.md  output-97-publish.md
tests/: test_consolidate_markdown.py
utils/: markdown_utils.py
(+106 files in other folders)
