[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "consolidate-markdown"
version = "0.1.0"
description = "Consolidate and clean markdown files across directories."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
consolidate-markdown = "consolidate_markdown.main:main"
